@@ -1,5 +1,7 @@
 Version 0.0.1 to 0.1.0
 ----------------------
+* remove optional argument for generator in prime.py. Condition may
+  be specified with itertools instead.
 * add new module finitefield for finite field.  It now only includes
   finite prime field.
 * add new module combinatrial including binomial and factorial.
